HLMS-002 - update openapi docs, improve readability
